# jni-cpp20

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  test.cpp
include/: java_class.hpp  java_method.hpp  java_object.hpp  java_ref.hpp  main.cpp
include/meta/: is_one_of.hpp
src/: dsl.hpp  fixed_string.hpp  is_template_instance.hpp  java_class.hpp  java_object.hpp  java_ref.hpp  jvm.hpp  main.cpp  result.hpp  wrapper.hpp
tests/hello/: CMakeLists.txt
tests/hello/cpp/: hello.cpp
tests/hello/java/: Hello.java
